--- a/config.gradle
+++ b/config.gradle
@@ -3,6 +3,7 @@ ext {
             "navigationVersion" : "2.2.1",
             "coordinatorlayoutVersion": "1.1.0",
             "viewPager2Version": "1.0.0",
-            "materialVersion": "1.2.0-alpha05"
+            "materialVersion": "1.2.0-alpha05",
+            "constraintLayoutVersion": "2.0.0-beta4"
     ]
 }
